test/libyul/yulSyntaxTests/eof/selfdestruct.yul
{
	selfdestruct(0x02)
}
// ====
// bytecodeFormat: >=EOFv1
// ----
// TypeError 9132: (3-15): The "selfdestruct" instruction is only available in legacy bytecode VMs (you are currently compiling to EOF).
